k8s/apps/default/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        nas: local
      volumes:
        - name: transcode
          emptyDir: {}
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-local
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
            readOnly: true
      containers:
        - name: plex
          image: ghcr.io/onedr0p/plex:rolling@sha256:805ad80226d54f03c21efe84979558e7c3d0b07f345b9c929ff11de8cc216151
          resources:
            requests:
              cpu: 4000m
              memory: 8096Mi
              nvidia.com/gpu: 1
            limits:
              memory: 8096Mi
              nvidia.com/gpu: 1
          ports:
            - containerPort: 32400
              name: web
          volumeMounts:
            - name: transcode
              mountPath: /transcode
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
