k8s/apps/default/plex/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
spec:
  serviceName: plex
  replicas: 1
  selector:
    matchLabels:
      app: plex
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
        storageClassName: ceph-block
        volumeMode: Filesystem
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      nodeSelector:
        nas: local
      volumes:
        - name: transcode
          emptyDir: {}
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
            readOnly: true
      containers:
        - name: plex
          image: ghcr.io/onedr0p/plex:rolling@sha256:e2fa39779d5fe7f10ee92b9c2fc492113c3a397d3ce5032152e0cb6d557a295c
          resources:
            requests:
              cpu: 1000m
              memory: 4096Mi
              nvidia.com/gpu: "1"
            limits:
              memory: 4096Mi
              nvidia.com/gpu: "1"
          ports:
            - containerPort: 32400
              name: web
          volumeMounts:
            - name: transcode
              mountPath: /transcode
            - name: config
              mountPath: /config
            - name: arr-media
              mountPath: /data
