k8s/apps/default/plex/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/issuer: letsencrypt-production
spec:
  ingressClassName: internal
  rules:
    - host: &host plex.holywoo.cbannister.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: ingress-plex-tls
